{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 20,
  "lineage": "50eecd68-0b81-492b-008e-23105d9161bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:384299663835:instance/i-0f319683efb187cba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f319683efb187cba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ranbaddi",
            "monitoring": false,
            "primary_network_interface_id": "eni-09bf2f5bfd2153a5b",
            "private_dns": "ip-10-0-0-129.ec2.internal",
            "private_ip": "10.0.0.129",
            "public_ip": "54.161.153.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0119d17ab2f7e0860",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093646f80f57cfcb5",
            "tags": {
              "Name": "client-web-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0058757298ae04aea"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.mysubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ae64258e48625704",
            "owner_id": "384299663835",
            "tags": {
              "Name": "client-igw"
            },
            "vpc_id": "vpc-021826628a78ba859"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00a82dc79686f90ce",
            "owner_id": "384299663835",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae64258e48625704",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "client-publicrt"
            },
            "vpc_id": "vpc-021826628a78ba859"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d1a254642f2ca5f",
            "route_table_id": "rtb-00a82dc79686f90ce",
            "subnet_id": "subnet-093646f80f57cfcb5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.mysubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384299663835:security-group/sg-0058757298ae04aea",
            "description": "ONLY HTTP CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0058757298ae04aea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "client-web-sg",
            "name_prefix": null,
            "owner_id": "384299663835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "client-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021826628a78ba859"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384299663835:subnet/subnet-093646f80f57cfcb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-093646f80f57cfcb5",
            "map_public_ip_on_launch": false,
            "owner_id": "384299663835",
            "tags": {
              "Environment": "test",
              "Name": "Client-Frontend-Subnet"
            },
            "vpc_id": "vpc-021826628a78ba859"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384299663835:vpc/vpc-021826628a78ba859",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fe4a54262b5e598",
            "default_route_table_id": "rtb-06375f1b73f5352fc",
            "default_security_group_id": "sg-017cc97ec6dc38d0d",
            "dhcp_options_id": "dopt-69c5f912",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-021826628a78ba859",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06375f1b73f5352fc",
            "owner_id": "384299663835",
            "tags": {
              "Environment": "test",
              "Name": "Client-VPC"
            }
          }
        }
      ]
    }
  ]
}